WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254780
image/jxl isn't added to the Accept: header when USE(JPEGXL) is enabled
https://bugs.webkit.org/show_bug.cgi?id=254780
Summary
image/jxl isn't added to the Accept: header when USE(JPEGXL) is enabled
Myles C. Maxfield
Reported
2023-03-30 16:35:57 PDT
image/jxl isn't added to the Accept: header when USE(JPEGXL) is enabled
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-30 16:36:23 PDT
<
rdar://problem/107446115
>
Myles C. Maxfield
Comment 2
2023-03-30 16:39:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12212
EWS
Comment 3
2023-03-31 17:16:26 PDT
Committed
262455@main
(8778787cbaef): <
https://commits.webkit.org/262455@main
> Reviewed commits have been landed. Closing PR #12212 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug