Cherry-pick 262455@main (8778787cbaef). https://bugs.webkit.org/show_bug.cgi?id=254780

image/jxl isn't added to the Accept: header when USE(JPEGXL) is enabled
    https://bugs.webkit.org/show_bug.cgi?id=254780
    rdar://107446115

    Reviewed by Said Abou-Hallawa.

    Just like AVIF, if an image format is enabled, it should be advertised in the Accept: header.

    Because every port, AFAIK, has USE(JPEGXL) disabled, I didn't add an automated test for this.

    * Source/WebCore/loader/cache/CachedResourceRequest.cpp:
    (WebCore::acceptHeaderValueForJPEGXLImageResource):
    (WebCore::acceptHeaderValueForImageResource):

    Canonical link: https://commits.webkit.org/262455@main